--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,47 @@
-
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
-<div class="row">
-  <div class="center-block col-md-6" style="background-color:#ccc;"><h1>Home#index</h1>
-    <p>Find me in app/views/home/index.html.erb</p></div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="center-block col-md-8"><h1>Home#index</h1>
+      <p>Find me in app/views/home/index.html.erb</p>
+      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam aut commodi cumque ex, excepturi
+        in
+        ipsum laboriosam laudantium molestias mollitia nostrum numquam pariatur quas quibusdam rem, tenetur ullam vero!
+      </div>
+      <div>Culpa error molestiae mollitia qui suscipit? Animi aperiam deleniti ex, impedit inventore laboriosam nostrum
+        perferendis sapiente sequi tenetur? Dolores, error excepturi ipsam laborum nulla recusandae sequi sint vel
+        veniam
+        voluptatem?
+      </div>
+      <div>Debitis dolore id inventore nam optio repellendus, tempore. Accusantium commodi, cupiditate doloribus enim
+        est
+        eveniet laudantium magni odit quas reiciendis saepe ullam veritatis voluptas. Architecto minima modi nihil nobis
+        quisquam?
+      </div>
+      <div>Commodi dolore enim nesciunt quae qui repudiandae sit totam? Distinctio dolore fuga illum iure magnam maxime
+        repellendus ullam? Animi at autem culpa iusto libero magni nam, numquam quam repudiandae vitae.
+      </div>
+      <div>Cupiditate deleniti deserunt dolorem ea et fugiat fugit hic itaque molestias non, numquam officia quam, quas,
+        quis rem reprehenderit velit voluptate. Delectus deserunt eum ipsam natus provident, reiciendis sapiente ut?
+      </div>
+      <div>Ad animi asperiores beatae corporis dicta dolores eaque enim expedita explicabo fuga minima natus nisi nobis
+        non, nulla obcaecati placeat porro quae quas quod repudiandae sequi tempora vitae voluptatem voluptatum!
+      </div>
+      <div>Atque debitis dolor natus. Commodi cupiditate ducimus, ex iste praesentium quia reprehenderit sequi
+        voluptatum!
+        Aliquid, blanditiis consequuntur dolorem error est ipsum laboriosam, laborum nisi nulla quibusdam suscipit
+        tempore
+        vel voluptas.
+      </div>
+      <div>Accusamus ad aliquid asperiores assumenda aut consequuntur corporis deserunt dignissimos dolorum, eligendi ex
+        exercitationem expedita maxime modi mollitia necessitatibus nobis quae qui quibusdam repellendus sed sequi unde
+        vero voluptate voluptatum.
+      </div>
+      <div>Animi aperiam, commodi dicta dignissimos dolor dolores dolorum ex exercitationem facere fuga, neque qui quia
+        repellendus sequi ullam vitae voluptatem! A assumenda blanditiis cum dicta fuga impedit minus odit rem.
+      </div>
+      <div>Ipsa ipsam magnam numquam odio officiis quos, similique ut voluptatibus! A, culpa dignissimos distinctio
+        doloribus eius est excepturi fuga, ipsum officia officiis praesentium quas sunt totam! Est harum ipsa magnam?
+      </div>
+    </div>
+  </div>
 </div>
