--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -147,6 +147,9 @@ img .social-icon-wrapper{
     border-bottom: 1px solid #8080801a;
 
 }
+.row .align-items-center{
+    height: 100%;
+}
 .login-wrapper{
     position: absolute;
     left: 7%;
@@ -161,6 +164,14 @@ img .social-icon-wrapper{
 .lang {
     text-align: center;
     top: calc(50% - 22px/2 + 1px)
+}
+.footer {
+    margin-top: auto;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
 }
 .footer-wrapper{
     background: #D72130;
@@ -177,6 +188,11 @@ img .social-icon-wrapper{
 }
 .copyright-text{
     color: #FFFBFB;
+    text-align: right;
+}
+.text-left{
+    text-align: left;
+
 }
 a{
     font-family: Open Sans;
@@ -193,4 +209,10 @@ a{
     font-weight: bold;
     font-size: 16px;
     line-height: 19px;
+}
+
+body {
+    margin: 0!important;
+    min-height: 100%!important;
+
 }
