--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
+<div class="container">
 
 <h1>Articles</h1>
 
@@ -31,3 +32,4 @@
 <br>
 
 <%= link_to 'New Article', new_article_path %>
+</div>
