--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
-<footer class="page-footer font-small pt-4">
+<footer class=" footer page-footer font-small pt-4 ">
 
   <!-- Footer Links -->
-  <div class="row">
-    <div class="center-block col-md-8 text-left text-md-left">
+  <div class="container">
+    <div class="center-block col-md-12 text-left text-md-left">
 
       <!-- Grid row -->
       <div class="row">
@@ -85,12 +85,14 @@
     <!-- Footer Links -->
   </div>
   <!-- Copyright -->
-  <div class="footer-copyright py-3">
-    <div class="col-sm-6 copyright">
+  <div class="footer-copyright py-3 px-3">
+    <div class="row align-items-center">
+    <div class="col-sm-6 copyright ">
       <p class="text-left logo-text">Sports Hub</p>
     </div>
     <div class="col-sm-6 copyright">
       <p class="text-right copyright-text">Copyright ©2019 Sports Hub <br> Privacy / Terms</p></div>
+    </div>
   </div>
   <!-- Copyright -->
 
