--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,5 @@
-<header>
+
+<header class="container-fluid">
   <div class="row header-container">
     <div class="logo-container col">
       <span class="logo-text">Sports Hub</span>
@@ -20,31 +21,43 @@
       </div>
     </div>
     <div class="login-container col">
-      <div class="login col-sm-8">
-        <button type="button" class="btn btn-outline-danger">Sign up</button>
-        <button type="button" class="btn btn-outline-danger border border-danger">Log in</button>
-        <!--        <div class="dropdown show">-->
-        <!--          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-        <!--            Dropdown link-->
-        <!--          </a>-->
+      <div class="row align-items-center">
+        <div class="login col-sm-8">
+          <button type="button" class="btn btn-outline-danger">Sign up</button>
+          <button type="button" class="btn btn-outline-danger border border-danger">Log in</button>
+          <!--        <div class="dropdown show">-->
+          <!--          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+          <!--            Dropdown link-->
+          <!--          </a>-->
 
-        <!--          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">-->
-        <!--            <a class="dropdown-item" href="#">Action</a>-->
-        <!--            <a class="dropdown-item" href="#">Another action</a>-->
-        <!--            <a class="dropdown-item" href="#">Something else here</a>-->
-        <!--          </div>-->
-        <!--        </div>-->
-        <!--        <ul>-->
-        <!--          <li>Name</li>-->
-        <!--          <li>View profile</li>-->
-        <!--          <li>Change password</li>-->
-        <!--          <li>My surveys</li>-->
-        <!--          <li>Team hub</li>-->
-        <!--          <li>Log out</li>-->
-        <!--        </ul>-->
+          <!--          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">-->
+          <!--            <a class="dropdown-item" href="#">Action</a>-->
+          <!--            <a class="dropdown-item" href="#">Another action</a>-->
+          <!--            <a class="dropdown-item" href="#">Something else here</a>-->
+          <!--          </div>-->
+          <!--        </div>-->
+          <!--        <ul>-->
+          <!--          <li>Name</li>-->
+          <!--          <li>View profile</li>-->
+          <!--          <li>Change password</li>-->
+          <!--          <li>My surveys</li>-->
+          <!--          <li>Team hub</li>-->
+          <!--          <li>Log out</li>-->
+          <!--        </ul>-->
+        </div>
+        <div class="lang col-sm-4 ">
+          <div class="dropdown">
+            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              EN
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </div>
       </div>
-      <div class="lang col-sm-4 ">
-        <p>EN</p>
+
       </div>
     </div>
   </div>
