--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,11 @@
   </head>
   <%= render partial: 'shared/header' %>
   <body>
-    <%= yield %>
+  <div class="container">
+    <div class="row">
+      <%= yield %>
+    </div>
+  </div>
   </body>
   <%= render partial: 'shared/footer' %>
 
