--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,41 @@
-<p>Hello <%= @resource.email %>!</p>
+<div class="container" style="text-align:center;background-color:#ECECEC; font-family: Open Sans;">
+  <h1>You have requested to reset your password <br>
+    <%= Time.now.strftime("%B %d %Y") %> </h1>
+  <div class="wrapper" style="display:block; background-color:#FFFFFF; width:580px;height:300px; margin:auto; padding:30px">
+    <span style="padding-bottom:20px!important;">To reset your password, click the following link and follow the instructions.</span>
+    <div class="button" style="position:relative; margin: 10px 0 10px 0;background-color:#D72130; min-width:250px;min-height:50px; text-align:center">
+      <%= link_to 'Reset password', edit_password_url(@resource, reset_password_token: @token), class: "reset-button"%>
+    </div>
+    <h2 style="font-weight:bold;font-family: Open Sans; ">Why do I have to reset my password?</h2>
+    <span style="padding:0 10px 0 10px">As a security best practice, Sports Hub does not store your password. As such, we cannot simply send you your old password. A unique link to reset your password has been generated for you.
+</span>
+    <br><br>
+    <span>Please ignore this message if you havn’t requested reseting password.</span>
+  </div>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+  <span style="display:block;position:relative;top: 30px;font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 28px;color:#D72130">Sports Hub</span>
+</div>
+<style>
+    body {
+        background-color: #ECECEC
+    }
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+    span {
+        padding: 0 10px 0 10px !important;
+    }
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+    .reset-button {
+        display: block;
+        text-decoration: none;
+        position: relative;
+        padding:13px;
+        color: #fff;
+        font-weight: normal;
+        font-size: 18px;
+        text-transform:uppercase;
+    }
+</style>
