--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,57 @@
-<h2>Sign up</h2>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-6 col-login-image">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="logo-container__login position-absolute">
+        <a href="/">
+          <span class="logo-text">Sports Hub</span>
+        </a>
+      </div>
+      <%= image_tag("login.png", class: "login-img img-fluid ") %>
+    </div>
+    <div class="col-md-6 ">
+      <div class="container p-3 text-end">
+        <span class="px-3">Already have an account? </span> <%= link_to 'Log in', new_user_session_path, class: "btn btn-outline-danger"%>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+      <div class="wrapper align-items-center col-login-fields-wrapper">
+        <div class="row center-block">
+          <h2 class="font-weight-bold">Sign up to Sports Hub</h2>
+
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
+            <div class="row">
+              <div class="col">
+                <%= f.label :first_name %>
+                <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
+              </div>
+              <div class="col">
+                <%= f.label :last_name %>
+                <%= f.text_field :last_name, autofocus: true, class: "form-control" %>
+              </div>
+            </div>
+            <div class="form-group">
+              <%= f.label 'EMAIL', class: "text-uppercase"%>
+              <%= f.email_field :email, class: "form-control", autofocus: true, autocomplete: "email", placeholder: "jonhdoe@gmail.com" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.label 'PASSWORD', class: "text-uppercase"%>
+              <%= f.password_field :password, class: "form-control", autocomplete: "new-password" , placeholder: "8 + characters (letters and numbers)" %>
+            </div>
+
+            <div class="field">
+              <%= f.label :password_confirmation %><br/>
+              <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" , placeholder: " #{@minimum_password_length} + characters (letters and numbers)" %>
+            </div>
+
+            <div class="actions">
+              <%= f.submit "Sign up", class: "btn-lg btn-danger " %>
+            </div>
+          <% end %>
+
+          <%= render "devise/shared/links" %></div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
