--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,22 +11,22 @@
     </div>
     <div class="col-md-6 ">
       <div class="container p-3 text-end">
-        <span class="px-3">Already have an account? </span> <%= link_to 'Log in', new_user_session_path, class: "btn btn-outline-danger"%>
+        <span class="px-3"><%= t('already_have_login') %> </span> <%= link_to 'Log in', new_user_session_path, class: "btn btn-outline-danger"%>
 
       </div>
       <div class="wrapper align-items-center col-login-fields-wrapper">
         <div class="row center-block">
-          <h2 class="font-weight-bold">Sign up to Sports Hub</h2>
+          <h2 class="font-weight-bold"><%= t('sign_up_to_sports_hub') %></h2>
 
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= render "devise/shared/error_messages", resource: resource %>
             <div class="row">
               <div class="col">
-                <%= f.label :first_name %>
+                <%= f.label :first_name, class: "text-uppercase"%>
                 <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
               </div>
               <div class="col">
-                <%= f.label :last_name %>
+                <%= f.label :last_name, class: "text-uppercase"%>
                 <%= f.text_field :last_name, autofocus: true, class: "form-control" %>
               </div>
             </div>
@@ -36,17 +36,17 @@
             </div>
 
             <div class="form-group">
-              <%= f.label 'PASSWORD', class: "text-uppercase"%>
-              <%= f.password_field :password, class: "form-control", autocomplete: "new-password" , placeholder: "8 + characters (letters and numbers)" %>
+              <%= f.label :password, class: "text-uppercase"%>
+                <%= f.password_field :password, class: "form-control", autocomplete: "new-password" , placeholder: "#{@minimum_password_length} #{t('placeholder_password')}" %>
             </div>
 
             <div class="field">
-              <%= f.label :password_confirmation %><br/>
-              <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" , placeholder: " #{@minimum_password_length} + characters (letters and numbers)" %>
+              <%= f.label :password_confirmation ,class: "text-uppercase" %><br/>
+              <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" , placeholder: "#{@minimum_password_length} #{t('placeholder_password')}" %>
             </div>
 
             <div class="actions">
-              <%= f.submit "Sign up", class: "btn-lg btn-danger " %>
+              <%= f.submit "#{t('sign_up')}", class: "btn-lg btn-danger " %>
             </div>
           <% end %>
 
