Add validation for last name and first name fields

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -24,7 +24,7 @@
     </div>
     <div class="login-container col">
       <div class="row align-items-center">
-        <div class="login col-sm-8">
+        <div class="login col-sm-6 px-5">
           <% if user_signed_in? %>
              <span class="dropdown">
             <button>
@@ -54,7 +54,7 @@
           <% end %>
 
         </div>
-        <div class="lang col-sm-4 ">
+        <div class="lang col-sm-6 ">
           <span class="dropdown">
             <button>
               EN
