--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,35 +22,27 @@
             <%= render "devise/shared/error_messages", resource: resource %>
             <div class="row">
               <div class="col">
-                <%= f.label :first_name, class: "text-uppercase"%>
+                <%= f.label :first_name, class: "text-uppercase py-2"%>
                 <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
               </div>
               <div class="col">
-                <%= f.label :last_name, class: "text-uppercase"%>
+                <%= f.label :last_name, class: "text-uppercase py-2"%>
                 <%= f.text_field :last_name, autofocus: true, class: "form-control" %>
               </div>
             </div>
             <div class="form-group">
-              <%= f.label 'EMAIL', class: "text-uppercase"%>
+              <%= f.label :email, class: "text-uppercase py-2"%>
               <%= f.email_field :email, class: "form-control", autofocus: true, autocomplete: "email", placeholder: "jonhdoe@gmail.com" %>
             </div>
 
             <div class="form-group">
-              <%= f.label :password, class: "text-uppercase"%>
+              <%= f.label :password, class: "text-uppercase py-2"%>
                 <%= f.password_field :password, class: "form-control", autocomplete: "new-password" , placeholder: "#{@minimum_password_length} #{t('placeholder_password')}" %>
             </div>
-
-            <div class="field">
-              <%= f.label :password_confirmation ,class: "text-uppercase" %><br/>
-              <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" , placeholder: "#{@minimum_password_length} #{t('placeholder_password')}" %>
-            </div>
-
-            <div class="actions">
+            <div class="actions py-3">
               <%= f.submit "#{t('sign_up')}", class: "btn-lg btn-danger " %>
             </div>
           <% end %>
-
-          <%= render "devise/shared/links" %></div>
       </div>
     </div>
   </div>
