--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,13 @@
 <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>-->
 <div class="container-fluid">
   <div class="row">
-    <div class="center-block col-md-8"><h1>Home#index</h1>
+    <div class="center-block col-md-3">
+      <h1>Menu</h1>
+      <p class="p">This is another paragraph.</p>
+
+      <span class="button">Click me to hide paragraphs</span>
+    </div>
+    <div class="center-block col-md-9"><h1>Home#index</h1>
       <p>Find me in app/views/home/index.html.erb</p>
       <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam aut commodi cumque ex, excepturi
         in
