Fix issue with webpack and bootstrap js

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,8 @@
  *= require bootstrap
  *= require_tree .
  *= require_self
- */
-
+@import "bootstrap";
+*/
 .profiler-result {
     display: none;
 }
