--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,8 @@
 
       <span class="button">Click me to hide paragraphs</span>
     </div>
-    <div class="center-block col-md-9"><h1>Home#index</h1>
+    <div class="center-block col-md-9">
+      <h1>Home#index</h1>
       <p>Find me in app/views/home/index.html.erb</p>
       <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam aut commodi cumque ex, excepturi
         in
