--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -16,12 +16,21 @@
   <% if current_page?(new_user_session_path) || current_page?(new_user_registration_path) || current_page?(new_user_password_path) %>
     <%= yield %>
   <% else %>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
-        <h2>ADMIN LAYOUT</h2>
-        <%= yield %>
+        <div class="center-block col-md-3">
+          <h1>Menu</h1>
+            <ul>
+              <li><%= link_to t('articles'), admin_articles_path  %></li>
+              <li><%= link_to 'Homepage', home_index_path  %></li>
+            </ul>
+        </div>
+        <div class="center-block col-md-9">
+          <p class="notice"><%= notice %></p>
+          <p class="alert"><%= alert %></p>
+          <h2>ADMIN LAYOUT</h2>
+          <%= yield %>
+        </div>
       </div>
     </div>
   <% end %>
