Add User controller and create page for edit user info

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -367,3 +367,7 @@ a:hover {
     color: #cc0000!important;
     background-color: #fff!important;
 }
+.tab-user-info:hover {
+    display:block;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)!important;
+}
